@@ -3,6 +3,7 @@ v0.6.1
 - Widget selection improvements
 - Custom property selection improvements
 - Fix properties being applied to wrong profile
+- Just Select Widget method
 
 v0.6.0
 - Version bump for Isengard repo.
